# AmBlue

./: .env.example  .env.local.example  .gitignore  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  README.md  SERVICES.md
src/: __main__.py
src/routes/: agent.py  document.py  website.py  wiki.py
src/services/: agent_service.py  assiatant.py  database_service.py  document_service.py  indexer_service.py  website_service.py  wiki_service.py
src/services/assistant/: config.py  graph.py  prompts.py  state.py  utils.py
src/services/sql/: agent.py  sql.py
src/types/: website.py  wiki.py
src/utils/: agent_dependency.py  dependency.py  logger.py
