[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "bs4>=0.0.2",
    "chromadb>=0.6.3",
    "docx2txt>=0.8",
    "fastapi>=0.115.8",
    "langchain>=0.3.17",
    "langchain-chroma>=0.2.1",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.34",
    "langchain-groq>=0.2.4",
    "langchain-ollama>=0.2.3",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.2.70",
    "pypdf>=5.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
